Parcially fix Issue#2 by using JSONB from Eclipse Yasson